--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@
 /* header code */
 .header{
     width: 100%;
-    height: 10vh;
+    height: 9vh;
     display: flex;
     justify-content: ;
     align-items: center;
 }
 .header--amazon_logo_img{
     height: 6vh;
-    width:8.5vw;
+    width:7vw;
     margin-left: 35px;
 }
 .header--amazon_logo{
@@ -37,22 +37,22 @@
 
 /* select your address code */
 .header--select_address{
-    height: 6.7vh;
+    height: 7vh;
     width:12vw;
     margin-left: 5px;
-    padding-top: 5px;
-    
+    display: block;   
 }
 .address{
     color: white;
-    font-size: 3rem;
+    font-size: 2.9rem;
     font-weight: bold;
 }
 .hello{
     color: rgb(173, 167, 167);
     margin-left: 25px;
-    margin-top: 10px;
     font-size: 3rem;
+    height: 2vh;
+    margin-top: 25px;
 }
 .icon{
     color: white;
@@ -74,7 +74,7 @@
     position: absolute;
     height: 5.7vh;
     width: 18vh;
-    margin-top: 1px;
+    margin-top: 10px;
     margin-left: 1px;
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
@@ -91,10 +91,10 @@
 .search_logo{
     background-color: #febd69;
     position: absolute;
-    margin-left: 46.5%;
+    margin-left: 47%;
     margin-top: 1px;
-    width: 3.5vw;
-    height: 5.7vh;
+    width: 3.6vw;
+    height: 6vh;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
     justify-content: center;
@@ -114,10 +114,10 @@
 }
 .flag{
     width: 5vw;
-    height: 5vh;
+    height: 6vh;
 }
 .header--signin{
-    height: 6vh;
+    height: 5.9vh;
     margin-left: 10px
 
 }
@@ -125,6 +125,7 @@
     color: rgb(245, 239, 239);
     font-size:3rem;
     margin-left: 10px;
+  
 }
 .header--signin_ac{
     display: flex;
@@ -151,6 +152,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 20px;
 }
 .header--cart_p{
     font-size: 3rem;
@@ -172,6 +174,7 @@
 }
 .all{
     font-size: 3rem;
+    margin-top: 10px;
 }
 .child_bar1{
     display: flex;
@@ -230,17 +233,16 @@
 }
 .breathe{
     text-align: center;
-}
-.prime2{
-    height: ;
+    height: 1.6vh
 }
 .join{
     color: white;
     font-size: 3.5rem;
+    height: 3vh;
 }
 .prime2{
     margin-left: 25px;
-    margin-right: 25px;
+    margin-right: 30px;
 }
 .primevideo{
     color: white;
@@ -272,7 +274,7 @@
     font-size: 3rem;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 2%;
-    width: 10%;
+    width: 12%;
  }
  .restrictions{
     color: black;
@@ -280,7 +282,7 @@
     margin-left: 55px;
  }
  .hover--amazonfashion:hover{
-    border-bottom: 2px solid rgb(233, 181, 12);
+    border-bottom: 7px solid rgb(233, 119, 12);
  }
  .deals{
     width: 100%;
@@ -303,3 +305,55 @@
  .deals--discount{
     display: flex;
  }
+ .main{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+ }
+ .main--shoppay{
+    width: 47vh;
+    height: 60vh;
+    background-color: white;
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 1.5%;
+    font-size: 2.6rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 60px;
+ }
+ h2{
+    margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+ }
+ .main--shoppay_img{
+    width: 100%;
+ }
+ .main--livingroom{
+    margin-left: 27.5%;
+    padding-left: 50px;
+    font-size: 2.7rem;
+    font-family: Arial, Helvetica, sans-serif;
+ }
+.main--livingroom_img{
+    width: 10vw;
+    height: 20vh;
+    margin-top: 5%;
+}
+ .main--tools{
+    margin-left: 53.2%;
+    padding-left: 60px;
+ }
+ .grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin-bottom: 50px;
+    font-size: 2.2rem;
+    font-family: Arial, Helvetica, sans-serif;
+ }
+ .anchor{
+    
+ }
+ 
+ 
