--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@
 }
 .breathe{
     text-align: center;
-    height: 1.6vh
+    height: 3vh
 }
 .join{
     color: white;
@@ -333,7 +333,7 @@
  .main--livingroom{
     margin-left: 27.5%;
     padding-left: 50px;
-    font-size: 2.7rem;
+    font-size: 2.5rem;
     font-family: Arial, Helvetica, sans-serif;
  }
 .main--livingroom_img{
@@ -352,8 +352,34 @@
     font-size: 2.2rem;
     font-family: Arial, Helvetica, sans-serif;
  }
- .anchor{
+.main-signin{
+    position: absolute;
+    margin-left: 78.7%;
+    margin-top:22.6%;
+}
+ .main--signin1{
+    background-color: white;
+    width: 18.8vw;
+    height:21vh;
+    font-size: 3.8rem;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 50px;
+    padding-left: 50px;
+ }
+ .main--button{
+    height: 4vh;
+    width: 18vw;
+    background-color: yellow;
+    border-radius: 20px;
+    border: none;
+    margin-top: 75px;
+    font-size: 2.5rem;
     
  }
- 
+ .main-laptop_img{
+    margin-top:4%;
+    width: 19.9vw;
+    height: 40vh;
+ }
  
